--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server.js",
+    "start:dev": "nodemon ./src/server.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,8 +21,11 @@
     "pg": "^8.11.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/multer": "^1.4.7",
-    "@types/pg": "^8.10.2"
+    "@types/pg": "^8.10.2",
+    "ts-node": "^10.9.1"
   }
 }
